@@ -1,0 +1,11 @@
+---
+- name: install mesos, marathon, chronos
+  apt: name={{item}} state=installed
+  with_items:
+    - zookeeper
+    - mesos
+    - marathon
+    - chronos
+  tags:
+    - apt
+    - git
