@@ -1,0 +1,9 @@
+---
+- name: install mesos
+  apt: name={{item}} state=installed
+  with_items:
+    - zookeeper
+    - mesos
+  tags:
+    - apt
+    - git
