@@ -1,14 +1,0 @@
-{
-    "container": {
-        "type": "DOCKER",
-        "docker": {
-            "image": "libmesos/ubuntu"
-        }
-    },
-    "id": "ubuntu",
-    "instances": 1,
-    "cpus": 0.5,
-    "mem": 512,
-    "uris": [],
-    "cmd": "while sleep 10; do date -u +%T; done"
-}
